# kinect-registration

./: CMakeLists.txt  README.md  acquisition.cpp  acquisition.h  coarse_align.cpp  coarse_align.h  filterCloud.cpp  filterCloud.h  fine_align.cpp  fine_align.h  info.txt  kp_detectors.cpp  kp_detectors.h  main.cpp  main_sin_visualization.cpp  surface_reconstruction.cpp  surface_reconstruction.h  timer.cpp  timer.h  typedefs.h  visualization.cpp  visualization.h
